refactor, now with styles and more recipes

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap"
         rel="stylesheet">
     <title>Brau's recipes</title>
+    <link rel="icon" type="image/png" href="/assets/icon/recipe-book.svg">
     <link rel="stylesheet" href="assets/styles/menu.css">
     <link rel="stylesheet" href="assets/styles/main.css">
     <link rel="stylesheet" href="assets/styles/container.css">
@@ -19,7 +20,42 @@
         <div class="header">
             <h2 class="title">Brau's Recipes</h2>
             <div class="presentation">
-                <img class="icon" src="assets/images/icon.png" />
+                <svg class="icon" fill="currentColor" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg"
+                    xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 512 512" xml:space="preserve">
+                    <g id="SVGRepo_bgCarrier" stroke-width="0" />
+                    <g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round" />
+                    <g id="SVGRepo_iconCarrier">
+                        <g>
+                            <g>
+                                <path
+                                    d="M409.285,207.265c-9.62,0.001-17.447,7.827-17.447,17.447v35.684c0,9.62,7.828,17.446,17.449,17.447 c9.619-0.001,17.446-7.827,17.446-17.447l0.001-35.686C426.734,215.094,418.905,207.266,409.285,207.265z" />
+                            </g>
+                        </g>
+                        <g>
+                            <g>
+                                <path
+                                    d="M306.574,151.956v323.68L512,437.233V113.519L306.574,151.956z M457.151,260.397c0,21.075-13.698,39-32.655,45.372 v108.558h-30.417V305.769c-18.957-6.371-32.657-24.297-32.658-45.372v-35.685c0-26.391,21.471-47.863,47.864-47.864 c26.39,0.001,47.862,21.472,47.866,47.86L457.151,260.397z" />
+                            </g>
+                        </g>
+                        <g>
+                            <g>
+                                <rect x="235.845" y="156.434" width="40.313" height="323.679" />
+                            </g>
+                        </g>
+                        <g>
+                            <g>
+                                <path
+                                    d="M473.751,31.887L297.38,74.601C278.98,78.814,265.422,85.968,256,96.442c-9.422-10.475-22.981-17.628-41.381-21.842 L38.249,31.887L7.524,84.012l224.659,42.005h47.632L504.46,83.985L473.751,31.887z" />
+                            </g>
+                        </g>
+                        <g>
+                            <g>
+                                <path
+                                    d="M0,113.549v323.683l205.426,38.403V151.958L0,113.549z M166.365,235.03c0,18.581-6.096,34.497-17.627,46.027 c-8.24,8.239-18.729,13.686-30.82,16.133v117.136H87.501V297.19c-12.089-2.448-22.576-7.894-30.816-16.133 c-11.533-11.531-17.628-27.447-17.627-46.028v-53.108h30.417v53.108c0,10.338,3.013,18.816,8.716,24.519 c2.567,2.566,5.701,4.584,9.309,6.031v-83.662h30.417v83.664c3.609-1.448,6.744-3.465,9.312-6.032 c5.703-5.702,8.718-14.18,8.718-24.519l0.001-53.113h30.417L166.365,235.03z" />
+                            </g>
+                        </g>
+                    </g>
+                </svg>
                 <div class="signature">
                     <p class="primary">Brayan Frank</p>
                     <p class="secondary">Master Chef</p>
@@ -32,7 +68,7 @@
     </nav>
     <main class="container">
         <div class="recipes">
-            <a class="box" href="/pizza-calabresa">
+            <a class="box" href="/recipes/pizza.html">
                 <div class="image-section">
                     <img class="image" src="assets/images/recipes/pizza.webp">
                 </div>
@@ -55,7 +91,8 @@
                         20min
                     </div>
                     <div class="badger">
-                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="var(--secondary-font)" class="icon">
+                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="var(--secondary-font)"
+                            class="icon">
                             <path fill-rule="evenodd"
                                 d="M12.963 2.286a.75.75 0 0 0-1.071-.136 9.742 9.742 0 0 0-3.539 6.176 7.547 7.547 0 0 1-1.705-1.715.75.75 0 0 0-1.152-.082A9 9 0 1 0 15.68 4.534a7.46 7.46 0 0 1-2.717-2.248ZM15.75 14.25a3.75 3.75 0 1 1-7.313-1.172c.628.465 1.35.81 2.133 1a5.99 5.99 0 0 1 1.925-3.546 3.75 3.75 0 0 1 3.255 3.718Z"
                                 clip-rule="evenodd" />
@@ -65,18 +102,18 @@
                     </div>
                 </div>
             </a>
-            <a class="box" href="/pizza-calabresa">
+            <a class="box" href="/recipes/bolo.html">
                 <div class="image-section">
-                    <img class="image" src="assets/images/recipes/pizza.webp">
+                    <img class="image" src="assets/images/recipes/bolo-cenoura.png">
                 </div>
-                <h3 class="title">Pizza de Calabresa</h3>
-                <p class="description">Esta pizza de calabresa é um clássico irresistível da culinária brasileira. A
-                    massa caseira, crocante por fora e macia por dentro, serve de base para uma generosa camada de molho
-                    de tomate temperado. Por cima, fatias de calabresa levemente picante são distribuídas junto com
-                    rodelas de cebola roxa, que caramelizam no forno trazendo um toque adocicado. Finalize com azeitonas
-                    pretas fatiadas e orégano fresco. O queijo mussarela derretido une todos os ingredientes, criando
-                    aqueles fios irresistíveis a cada fatia. Perfeita para compartilhar com a família ou amigos em
-                    qualquer ocasião.</p>
+                <h3 class="title">Bolo de Cenoura com Chocolate</h3>
+                <p class="description">Um clássico das tardes brasileiras, este bolo de cenoura é incrivelmente fofinho
+                    e úmido. A cenoura ralada se incorpora perfeitamente à massa, trazendo um sabor suave e uma cor
+                    vibrante. A cobertura de chocolate é o toque final perfeito: cremosa, brilhante e levemente
+                    açucarada, ela derrete na boca e complementa a doçura natural da cenoura. Simples de fazer, usando
+                    ingredientes que você provavelmente já tem em casa, este bolo é ideal para o café da tarde, festas
+                    de aniversário ou simplesmente para adoçar o dia. Uma fatia com café quentinho é pura felicidade.
+                </p>
                 <div class="badgers-section">
                     <div class="badger">
                         <svg xmlns="http://www.w3.org/2000/svg" fill="var(--secondary-font)" viewBox="0 0 24 24"
@@ -85,31 +122,31 @@
                                 d="M12 2.25c-5.385 0-9.75 4.365-9.75 9.75s4.365 9.75 9.75 9.75 9.75-4.365 9.75-9.75S17.385 2.25 12 2.25ZM12.75 6a.75.75 0 0 0-1.5 0v6c0 .414.336.75.75.75h4.5a.75.75 0 0 0 0-1.5h-3.75V6Z"
                                 clip-rule="evenodd" />
                         </svg>
-                        20min
+                        45min
                     </div>
                     <div class="badger">
-                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="var(--secondary-font)" class="icon">
+                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="var(--secondary-font)"
+                            class="icon">
                             <path fill-rule="evenodd"
                                 d="M12.963 2.286a.75.75 0 0 0-1.071-.136 9.742 9.742 0 0 0-3.539 6.176 7.547 7.547 0 0 1-1.705-1.715.75.75 0 0 0-1.152-.082A9 9 0 1 0 15.68 4.534a7.46 7.46 0 0 1-2.717-2.248ZM15.75 14.25a3.75 3.75 0 1 1-7.313-1.172c.628.465 1.35.81 2.133 1a5.99 5.99 0 0 1 1.925-3.546 3.75 3.75 0 0 1 3.255 3.718Z"
                                 clip-rule="evenodd" />
                         </svg>
-
-                        420kcal
+                        320kcal
                     </div>
                 </div>
             </a>
-            <a class="box" href="/pizza-calabresa">
+            <a class="box" href="/recipes/strogonoff.html">
                 <div class="image-section">
-                    <img class="image" src="assets/images/recipes/pizza.webp">
+                    <img class="image" src="assets/images/recipes/strogonoff-frango.png">
                 </div>
-                <h3 class="title">Pizza de Calabresa</h3>
-                <p class="description">Esta pizza de calabresa é um clássico irresistível da culinária brasileira. A
-                    massa caseira, crocante por fora e macia por dentro, serve de base para uma generosa camada de molho
-                    de tomate temperado. Por cima, fatias de calabresa levemente picante são distribuídas junto com
-                    rodelas de cebola roxa, que caramelizam no forno trazendo um toque adocicado. Finalize com azeitonas
-                    pretas fatiadas e orégano fresco. O queijo mussarela derretido une todos os ingredientes, criando
-                    aqueles fios irresistíveis a cada fatia. Perfeita para compartilhar com a família ou amigos em
-                    qualquer ocasião.</p>
+                <h3 class="title">Strogonoff de Frango</h3>
+                <p class="description">O strogonoff de frango é um dos pratos mais amados e práticos da culinária
+                    brasileira. Pedaços suculentos de peito de frango são refogados com cebola e alho, depois envolvidos
+                    em um molho cremoso feito com creme de leite, mostarda e um toque de ketchup para equilibrar o
+                    sabor. Champignons frescos adicionam textura e um sabor terroso delicioso. Tradicionalmente servido
+                    com arroz branco soltinho e batata palha crocante por cima, este prato é perfeito para almoços de
+                    família, jantares especiais ou quando você quer impressionar sem muito trabalho. Confortante e
+                    saboroso em cada garfada.</p>
                 <div class="badgers-section">
                     <div class="badger">
                         <svg xmlns="http://www.w3.org/2000/svg" fill="var(--secondary-font)" viewBox="0 0 24 24"
@@ -118,16 +155,83 @@
                                 d="M12 2.25c-5.385 0-9.75 4.365-9.75 9.75s4.365 9.75 9.75 9.75 9.75-4.365 9.75-9.75S17.385 2.25 12 2.25ZM12.75 6a.75.75 0 0 0-1.5 0v6c0 .414.336.75.75.75h4.5a.75.75 0 0 0 0-1.5h-3.75V6Z"
                                 clip-rule="evenodd" />
                         </svg>
-                        20min
+                        30min
                     </div>
                     <div class="badger">
-                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="var(--secondary-font)" class="icon">
+                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="var(--secondary-font)"
+                            class="icon">
                             <path fill-rule="evenodd"
                                 d="M12.963 2.286a.75.75 0 0 0-1.071-.136 9.742 9.742 0 0 0-3.539 6.176 7.547 7.547 0 0 1-1.705-1.715.75.75 0 0 0-1.152-.082A9 9 0 1 0 15.68 4.534a7.46 7.46 0 0 1-2.717-2.248ZM15.75 14.25a3.75 3.75 0 1 1-7.313-1.172c.628.465 1.35.81 2.133 1a5.99 5.99 0 0 1 1.925-3.546 3.75 3.75 0 0 1 3.255 3.718Z"
                                 clip-rule="evenodd" />
                         </svg>
+                        380kcal
+                    </div>
+                </div>
+            </a>
 
-                        420kcal
+            <a class="box" href="/recipes/brigadeiro.html">
+                <div class="image-section">
+                    <img class="image" src="assets/images/recipes/brigadeiro.png">
+                </div>
+                <h3 class="title">Brigadeiro</h3>
+                <p class="description">O brigadeiro é o doce mais icônico do Brasil e não pode faltar em nenhuma festa.
+                    Feito com apenas três ingredientes básicos - leite condensado, chocolate em pó e manteiga - este
+                    docinho é surpreendentemente simples, mas o resultado é absolutamente irresistível. O segredo está
+                    no ponto certo: cozinhe em fogo baixo, mexendo sempre, até que o brigadeiro desgrude do fundo da
+                    panela. Depois de esfriar, modele as bolinhas e passe no chocolate granulado. O resultado é uma
+                    explosão de sabor achocolatado, com textura cremosa e aveludada. Perfeito para festas, presentes ou
+                    para matar aquela vontade de doce.</p>
+                <div class="badgers-section">
+                    <div class="badger">
+                        <svg xmlns="http://www.w3.org/2000/svg" fill="var(--secondary-font)" viewBox="0 0 24 24"
+                            stroke-width="1.5" stroke="none" class="icon">
+                            <path fill-rule="evenodd"
+                                d="M12 2.25c-5.385 0-9.75 4.365-9.75 9.75s4.365 9.75 9.75 9.75 9.75-4.365 9.75-9.75S17.385 2.25 12 2.25ZM12.75 6a.75.75 0 0 0-1.5 0v6c0 .414.336.75.75.75h4.5a.75.75 0 0 0 0-1.5h-3.75V6Z"
+                                clip-rule="evenodd" />
+                        </svg>
+                        15min
+                    </div>
+                    <div class="badger">
+                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="var(--secondary-font)"
+                            class="icon">
+                            <path fill-rule="evenodd"
+                                d="M12.963 2.286a.75.75 0 0 0-1.071-.136 9.742 9.742 0 0 0-3.539 6.176 7.547 7.547 0 0 1-1.705-1.715.75.75 0 0 0-1.152-.082A9 9 0 1 0 15.68 4.534a7.46 7.46 0 0 1-2.717-2.248ZM15.75 14.25a3.75 3.75 0 1 1-7.313-1.172c.628.465 1.35.81 2.133 1a5.99 5.99 0 0 1 1.925-3.546 3.75 3.75 0 0 1 3.255 3.718Z"
+                                clip-rule="evenodd" />
+                        </svg>
+                        95kcal
+                    </div>
+                </div>
+            </a>
+            <a class="box" href="/recipes/pao-de-queijo.html">
+                <div class="image-section">
+                    <img class="image" src="assets/images/recipes/pao-queijo.png">
+                </div>
+                <h3 class="title">Pão de Queijo</h3>
+                <p class="description">Direto de Minas Gerais para sua mesa, o pão de queijo é uma delícia que conquista
+                    qualquer paladar. Feito com polvilho azedo ou doce, queijo minas curado ralado, ovos e leite, esses
+                    bolinhos têm uma casquinha levemente crocante e um interior macio e elástico, com aquele sabor
+                    inconfundível de queijo. Perfeitos para o café da manhã, lanche da tarde ou como aperitivo, os pães
+                    de queijo saem quentinhos do forno e são praticamente impossíveis de resistir. A receita é versátil
+                    e pode ser congelada, permitindo que você asse porções frescas sempre que quiser. Uma verdadeira
+                    paixão nacional.</p>
+                <div class="badgers-section">
+                    <div class="badger">
+                        <svg xmlns="http://www.w3.org/2000/svg" fill="var(--secondary-font)" viewBox="0 0 24 24"
+                            stroke-width="1.5" stroke="none" class="icon">
+                            <path fill-rule="evenodd"
+                                d="M12 2.25c-5.385 0-9.75 4.365-9.75 9.75s4.365 9.75 9.75 9.75 9.75-4.365 9.75-9.75S17.385 2.25 12 2.25ZM12.75 6a.75.75 0 0 0-1.5 0v6c0 .414.336.75.75.75h4.5a.75.75 0 0 0 0-1.5h-3.75V6Z"
+                                clip-rule="evenodd" />
+                        </svg>
+                        35min
+                    </div>
+                    <div class="badger">
+                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="var(--secondary-font)"
+                            class="icon">
+                            <path fill-rule="evenodd"
+                                d="M12.963 2.286a.75.75 0 0 0-1.071-.136 9.742 9.742 0 0 0-3.539 6.176 7.547 7.547 0 0 1-1.705-1.715.75.75 0 0 0-1.152-.082A9 9 0 1 0 15.68 4.534a7.46 7.46 0 0 1-2.717-2.248ZM15.75 14.25a3.75 3.75 0 1 1-7.313-1.172c.628.465 1.35.81 2.133 1a5.99 5.99 0 0 1 1.925-3.546 3.75 3.75 0 0 1 3.255 3.718Z"
+                                clip-rule="evenodd" />
+                        </svg>
+                        75kcal
                     </div>
                 </div>
             </a>
