--- a/recipes/bolo.html
+++ b/recipes/bolo.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap"
         rel="stylesheet">
-    <title>Pizza de Calabresa</title>
+    <title>Bolo de Cenoura</title>
     <link rel="stylesheet" href="../assets/styles/menu.css">
     <link rel="stylesheet" href="../assets/styles/main.css">
     <link rel="stylesheet" href="../assets/styles/container.css">
@@ -73,47 +73,42 @@
                 <path stroke-linecap="round" stroke-linejoin="round" d="M9 15 3 9m0 0 6-6M3 9h12a6 6 0 0 1 0 12h-3" />
             </svg>
         </a>
-        <div class="recipe-picture pizza-bg">
-            <h1>Pizza de Calabresa</h1>
-            <figcaption>Uma deliciosa pizza de calabresa</figcaption>
+        <div class="recipe-picture bolo-cenoura-bg">
+            <h1>Bolo de Cenoura com Chocolate</h1>
+            <figcaption>Um clássico brasileiro fofinho e irresistível</figcaption>
         </div>
         <div class="content">
             <h4 class="title">Descrição</h4>
-            <p class="description">Esta pizza de calabresa é um clássico irresistível da culinária brasileira. A massa
-                caseira, crocante por fora e macia por dentro, serve de base para uma generosa camada de molho de tomate
-                temperado. Por cima, fatias de calabresa levemente picante são distribuídas junto com rodelas de cebola
-                roxa, que caramelizam no forno trazendo um toque adocicado. Finalize com azeitonas pretas fatiadas e
-                orégano fresco. O queijo mussarela derretido une todos os ingredientes, criando aqueles fios
-                irresistíveis a cada fatia. Perfeita para compartilhar com a família ou amigos em qualquer ocasião.</p>
+            <p class="description">Um clássico das tardes brasileiras, este bolo de cenoura é incrivelmente fofinho e
+                úmido. A cenoura ralada se incorpora perfeitamente à massa, trazendo um sabor suave e uma cor vibrante.
+                A cobertura de chocolate é o toque final perfeito: cremosa, brilhante e levemente açucarada, ela derrete
+                na boca e complementa a doçura natural da cenoura. Simples de fazer, usando ingredientes que você
+                provavelmente já tem em casa, este bolo é ideal para o café da tarde, festas de aniversário ou
+                simplesmente para adoçar o dia. Uma fatia com café quentinho é pura felicidade.</p>
 
             <h4 class="title">Ingredientes</h4>
             <ul>
-                <li>500g de farinha de trigo</li>
-                <li>1 sachê de fermento biológico seco (10g)</li>
-                <li>1 colher de chá de açúcar</li>
-                <li>1 colher de chá de sal</li>
-                <li>2 colheres de sopa de azeite</li>
-                <li>300ml de água morna</li>
-                <li>300g de molho de tomate</li>
-                <li>300g de queijo mussarela ralado</li>
-                <li>200g de calabresa fatiada</li>
-                <li>1 cebola roxa em rodelas</li>
-                <li>Azeitonas pretas a gosto</li>
-                <li>Orégano a gosto</li>
+                <li>3 cenouras médias</li>
+                <li>3 ovos</li>
+                <li>1 xícara de óleo</li>
+                <li>2 xícaras de açúcar</li>
+                <li>2 xícaras de farinha de trigo</li>
+                <li>1 colher de sopa de fermento em pó</li>
+                <li>1 lata de leite condensado</li>
+                <li>4 colheres de sopa de chocolate em pó</li>
+                <li>2 colheres de sopa de manteiga</li>
             </ul>
 
             <h4 class="title">Passos</h4>
             <ol>
-                <li>Dissolva o fermento e o açúcar na água morna e deixe descansar por 5 minutos</li>
-                <li>Em uma tigela, misture a farinha e o sal, adicione o fermento dissolvido e o azeite</li>
-                <li>Sove a massa por 10 minutos até ficar lisa e elástica</li>
-                <li>Cubra com um pano e deixe descansar por 1 hora até dobrar de tamanho</li>
-                <li>Abra a massa em uma forma de pizza untada ou sobre uma superfície enfarinhada</li>
-                <li>Espalhe o molho de tomate sobre a massa, deixando uma borda</li>
-                <li>Distribua o queijo mussarela por toda a pizza</li>
-                <li>Coloque as fatias de calabresa, as rodelas de cebola e as azeitonas</li>
-                <li>Finalize com orégano e leve ao forno preaquecido a 220°C por 15-20 minutos</li>
-                <li>Retire quando a massa estiver dourada e o queijo derretido e borbulhante</li>
+                <li>Bata no liquidificador as cenouras, os ovos e o óleo até ficar homogêneo</li>
+                <li>Em uma tigela, misture o açúcar e a farinha de trigo</li>
+                <li>Adicione a mistura do liquidificador aos ingredientes secos e mexa bem</li>
+                <li>Por último, adicione o fermento e misture delicadamente</li>
+                <li>Despeje em uma forma untada e asse a 180°C por 40 minutos</li>
+                <li>Para a cobertura, misture o leite condensado, chocolate em pó e manteiga em uma panela</li>
+                <li>Cozinhe em fogo baixo mexendo sempre até engrossar</li>
+                <li>Despeje a cobertura sobre o bolo ainda quente e deixe esfriar antes de servir</li>
             </ol>
         </div>
     </main>
