--- a/recipes/brigadeiro.html
+++ b/recipes/brigadeiro.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap"
         rel="stylesheet">
-    <title>Pizza de Calabresa</title>
+    <title>Bolo de Cenoura</title>
     <link rel="stylesheet" href="../assets/styles/menu.css">
     <link rel="stylesheet" href="../assets/styles/main.css">
     <link rel="stylesheet" href="../assets/styles/container.css">
@@ -73,47 +73,37 @@
                 <path stroke-linecap="round" stroke-linejoin="round" d="M9 15 3 9m0 0 6-6M3 9h12a6 6 0 0 1 0 12h-3" />
             </svg>
         </a>
-        <div class="recipe-picture pizza-bg">
-            <h1>Pizza de Calabresa</h1>
-            <figcaption>Uma deliciosa pizza de calabresa</figcaption>
+        <div class="recipe-picture brigadeiro-bg">
+            <h1>Brigadeiro</h1>
+            <figcaption>O docinho mais amado do Brasil</figcaption>
         </div>
         <div class="content">
             <h4 class="title">Descrição</h4>
-            <p class="description">Esta pizza de calabresa é um clássico irresistível da culinária brasileira. A massa
-                caseira, crocante por fora e macia por dentro, serve de base para uma generosa camada de molho de tomate
-                temperado. Por cima, fatias de calabresa levemente picante são distribuídas junto com rodelas de cebola
-                roxa, que caramelizam no forno trazendo um toque adocicado. Finalize com azeitonas pretas fatiadas e
-                orégano fresco. O queijo mussarela derretido une todos os ingredientes, criando aqueles fios
-                irresistíveis a cada fatia. Perfeita para compartilhar com a família ou amigos em qualquer ocasião.</p>
+            <p class="description">O brigadeiro é o doce mais icônico do Brasil e não pode faltar em nenhuma festa.
+                Feito com apenas três ingredientes básicos - leite condensado, chocolate em pó e manteiga - este docinho
+                é surpreendentemente simples, mas o resultado é absolutamente irresistível. O segredo está no ponto
+                certo: cozinhe em fogo baixo, mexendo sempre, até que o brigadeiro desgrude do fundo da panela. Depois
+                de esfriar, modele as bolinhas e passe no chocolate granulado. O resultado é uma explosão de sabor
+                achocolatado, com textura cremosa e aveludada. Perfeito para festas, presentes ou para matar aquela
+                vontade de doce.</p>
 
             <h4 class="title">Ingredientes</h4>
             <ul>
-                <li>500g de farinha de trigo</li>
-                <li>1 sachê de fermento biológico seco (10g)</li>
-                <li>1 colher de chá de açúcar</li>
-                <li>1 colher de chá de sal</li>
-                <li>2 colheres de sopa de azeite</li>
-                <li>300ml de água morna</li>
-                <li>300g de molho de tomate</li>
-                <li>300g de queijo mussarela ralado</li>
-                <li>200g de calabresa fatiada</li>
-                <li>1 cebola roxa em rodelas</li>
-                <li>Azeitonas pretas a gosto</li>
-                <li>Orégano a gosto</li>
+                <li>1 lata de leite condensado</li>
+                <li>1 colher de sopa de manteiga</li>
+                <li>4 colheres de sopa de chocolate em pó</li>
+                <li>Chocolate granulado para cobrir</li>
             </ul>
 
             <h4 class="title">Passos</h4>
             <ol>
-                <li>Dissolva o fermento e o açúcar na água morna e deixe descansar por 5 minutos</li>
-                <li>Em uma tigela, misture a farinha e o sal, adicione o fermento dissolvido e o azeite</li>
-                <li>Sove a massa por 10 minutos até ficar lisa e elástica</li>
-                <li>Cubra com um pano e deixe descansar por 1 hora até dobrar de tamanho</li>
-                <li>Abra a massa em uma forma de pizza untada ou sobre uma superfície enfarinhada</li>
-                <li>Espalhe o molho de tomate sobre a massa, deixando uma borda</li>
-                <li>Distribua o queijo mussarela por toda a pizza</li>
-                <li>Coloque as fatias de calabresa, as rodelas de cebola e as azeitonas</li>
-                <li>Finalize com orégano e leve ao forno preaquecido a 220°C por 15-20 minutos</li>
-                <li>Retire quando a massa estiver dourada e o queijo derretido e borbulhante</li>
+                <li>Em uma panela, coloque o leite condensado, a manteiga e o chocolate em pó</li>
+                <li>Cozinhe em fogo baixo, mexendo sempre com uma colher de pau</li>
+                <li>Continue mexendo até que o brigadeiro desgrude do fundo da panela (cerca de 10-15 minutos)</li>
+                <li>Transfira para um prato untado com manteiga e deixe esfriar completamente</li>
+                <li>Com as mãos untadas com manteiga, modele bolinhas do tamanho desejado</li>
+                <li>Passe cada bolinha no chocolate granulado</li>
+                <li>Coloque em forminhas de papel e está pronto para servir</li>
             </ol>
         </div>
     </main>
