--- a/recipes/pao-de-queijo.html
+++ b/recipes/pao-de-queijo.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap"
         rel="stylesheet">
-    <title>Pizza de Calabresa</title>
+    <title>Bolo de Cenoura</title>
     <link rel="stylesheet" href="../assets/styles/menu.css">
     <link rel="stylesheet" href="../assets/styles/main.css">
     <link rel="stylesheet" href="../assets/styles/container.css">
@@ -73,47 +73,42 @@
                 <path stroke-linecap="round" stroke-linejoin="round" d="M9 15 3 9m0 0 6-6M3 9h12a6 6 0 0 1 0 12h-3" />
             </svg>
         </a>
-        <div class="recipe-picture pizza-bg">
-            <h1>Pizza de Calabresa</h1>
-            <figcaption>Uma deliciosa pizza de calabresa</figcaption>
+        <div class="recipe-picture pao-queijo-bg">
+            <h1>Pão de Queijo</h1>
+            <figcaption>Quentinho, crocante por fora e macio por dentro</figcaption>
         </div>
         <div class="content">
             <h4 class="title">Descrição</h4>
-            <p class="description">Esta pizza de calabresa é um clássico irresistível da culinária brasileira. A massa
-                caseira, crocante por fora e macia por dentro, serve de base para uma generosa camada de molho de tomate
-                temperado. Por cima, fatias de calabresa levemente picante são distribuídas junto com rodelas de cebola
-                roxa, que caramelizam no forno trazendo um toque adocicado. Finalize com azeitonas pretas fatiadas e
-                orégano fresco. O queijo mussarela derretido une todos os ingredientes, criando aqueles fios
-                irresistíveis a cada fatia. Perfeita para compartilhar com a família ou amigos em qualquer ocasião.</p>
+            <p class="description">Direto de Minas Gerais para sua mesa, o pão de queijo é uma delícia que conquista
+                qualquer paladar. Feito com polvilho azedo ou doce, queijo minas curado ralado, ovos e leite, esses
+                bolinhos têm uma casquinha levemente crocante e um interior macio e elástico, com aquele sabor
+                inconfundível de queijo. Perfeitos para o café da manhã, lanche da tarde ou como aperitivo, os pães de
+                queijo saem quentinhos do forno e são praticamente impossíveis de resistir. A receita é versátil e pode
+                ser congelada, permitindo que você asse porções frescas sempre que quiser. Uma verdadeira paixão
+                nacional.</p>
 
             <h4 class="title">Ingredientes</h4>
             <ul>
-                <li>500g de farinha de trigo</li>
-                <li>1 sachê de fermento biológico seco (10g)</li>
-                <li>1 colher de chá de açúcar</li>
+                <li>500g de polvilho azedo</li>
+                <li>1 xícara de leite</li>
+                <li>1/2 xícara de óleo</li>
                 <li>1 colher de chá de sal</li>
-                <li>2 colheres de sopa de azeite</li>
-                <li>300ml de água morna</li>
-                <li>300g de molho de tomate</li>
-                <li>300g de queijo mussarela ralado</li>
-                <li>200g de calabresa fatiada</li>
-                <li>1 cebola roxa em rodelas</li>
-                <li>Azeitonas pretas a gosto</li>
-                <li>Orégano a gosto</li>
+                <li>2 ovos</li>
+                <li>200g de queijo minas curado ralado</li>
+                <li>100g de queijo parmesão ralado</li>
             </ul>
 
             <h4 class="title">Passos</h4>
             <ol>
-                <li>Dissolva o fermento e o açúcar na água morna e deixe descansar por 5 minutos</li>
-                <li>Em uma tigela, misture a farinha e o sal, adicione o fermento dissolvido e o azeite</li>
-                <li>Sove a massa por 10 minutos até ficar lisa e elástica</li>
-                <li>Cubra com um pano e deixe descansar por 1 hora até dobrar de tamanho</li>
-                <li>Abra a massa em uma forma de pizza untada ou sobre uma superfície enfarinhada</li>
-                <li>Espalhe o molho de tomate sobre a massa, deixando uma borda</li>
-                <li>Distribua o queijo mussarela por toda a pizza</li>
-                <li>Coloque as fatias de calabresa, as rodelas de cebola e as azeitonas</li>
-                <li>Finalize com orégano e leve ao forno preaquecido a 220°C por 15-20 minutos</li>
-                <li>Retire quando a massa estiver dourada e o queijo derretido e borbulhante</li>
+                <li>Em uma panela, ferva o leite, o óleo e o sal</li>
+                <li>Despeje a mistura fervente sobre o polvilho e mexa bem até formar uma massa</li>
+                <li>Deixe esfriar até que seja possível manusear</li>
+                <li>Adicione os ovos um de cada vez, mexendo bem após cada adição</li>
+                <li>Acrescente os queijos ralados e misture até obter uma massa homogênea</li>
+                <li>Com as mãos untadas com óleo, modele bolinhas pequenas</li>
+                <li>Coloque em uma assadeira untada, deixando espaço entre elas</li>
+                <li>Asse em forno preaquecido a 180°C por 25-30 minutos ou até dourar</li>
+                <li>Sirva quentinho e aproveite!</li>
             </ol>
         </div>
     </main>
