--- a/recipes/strogonoff.html
+++ b/recipes/strogonoff.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap"
         rel="stylesheet">
-    <title>Pizza de Calabresa</title>
+    <title>Bolo de Cenoura</title>
     <link rel="stylesheet" href="../assets/styles/menu.css">
     <link rel="stylesheet" href="../assets/styles/main.css">
     <link rel="stylesheet" href="../assets/styles/container.css">
@@ -73,47 +73,44 @@
                 <path stroke-linecap="round" stroke-linejoin="round" d="M9 15 3 9m0 0 6-6M3 9h12a6 6 0 0 1 0 12h-3" />
             </svg>
         </a>
-        <div class="recipe-picture pizza-bg">
-            <h1>Pizza de Calabresa</h1>
-            <figcaption>Uma deliciosa pizza de calabresa</figcaption>
+        <div class="recipe-picture strogonoff-bg">
+            <h1>Strogonoff de Frango</h1>
+            <figcaption>Cremoso, saboroso e perfeito para toda família</figcaption>
         </div>
         <div class="content">
             <h4 class="title">Descrição</h4>
-            <p class="description">Esta pizza de calabresa é um clássico irresistível da culinária brasileira. A massa
-                caseira, crocante por fora e macia por dentro, serve de base para uma generosa camada de molho de tomate
-                temperado. Por cima, fatias de calabresa levemente picante são distribuídas junto com rodelas de cebola
-                roxa, que caramelizam no forno trazendo um toque adocicado. Finalize com azeitonas pretas fatiadas e
-                orégano fresco. O queijo mussarela derretido une todos os ingredientes, criando aqueles fios
-                irresistíveis a cada fatia. Perfeita para compartilhar com a família ou amigos em qualquer ocasião.</p>
+            <p class="description">O strogonoff de frango é um dos pratos mais amados e práticos da culinária
+                brasileira. Pedaços suculentos de peito de frango são refogados com cebola e alho, depois envolvidos em
+                um molho cremoso feito com creme de leite, mostarda e um toque de ketchup para equilibrar o sabor.
+                Champignons frescos adicionam textura e um sabor terroso delicioso. Tradicionalmente servido com arroz
+                branco soltinho e batata palha crocante por cima, este prato é perfeito para almoços de família,
+                jantares especiais ou quando você quer impressionar sem muito trabalho. Confortante e saboroso em cada
+                garfada.</p>
 
             <h4 class="title">Ingredientes</h4>
             <ul>
-                <li>500g de farinha de trigo</li>
-                <li>1 sachê de fermento biológico seco (10g)</li>
-                <li>1 colher de chá de açúcar</li>
-                <li>1 colher de chá de sal</li>
-                <li>2 colheres de sopa de azeite</li>
-                <li>300ml de água morna</li>
-                <li>300g de molho de tomate</li>
-                <li>300g de queijo mussarela ralado</li>
-                <li>200g de calabresa fatiada</li>
-                <li>1 cebola roxa em rodelas</li>
-                <li>Azeitonas pretas a gosto</li>
-                <li>Orégano a gosto</li>
+                <li>500g de peito de frango em cubos</li>
+                <li>1 cebola picada</li>
+                <li>3 dentes de alho picados</li>
+                <li>200g de champignon fatiado</li>
+                <li>2 colheres de sopa de molho de tomate</li>
+                <li>1 colher de sopa de mostarda</li>
+                <li>2 colheres de sopa de ketchup</li>
+                <li>1 caixa de creme de leite</li>
+                <li>Sal e pimenta a gosto</li>
+                <li>Batata palha para finalizar</li>
             </ul>
 
             <h4 class="title">Passos</h4>
             <ol>
-                <li>Dissolva o fermento e o açúcar na água morna e deixe descansar por 5 minutos</li>
-                <li>Em uma tigela, misture a farinha e o sal, adicione o fermento dissolvido e o azeite</li>
-                <li>Sove a massa por 10 minutos até ficar lisa e elástica</li>
-                <li>Cubra com um pano e deixe descansar por 1 hora até dobrar de tamanho</li>
-                <li>Abra a massa em uma forma de pizza untada ou sobre uma superfície enfarinhada</li>
-                <li>Espalhe o molho de tomate sobre a massa, deixando uma borda</li>
-                <li>Distribua o queijo mussarela por toda a pizza</li>
-                <li>Coloque as fatias de calabresa, as rodelas de cebola e as azeitonas</li>
-                <li>Finalize com orégano e leve ao forno preaquecido a 220°C por 15-20 minutos</li>
-                <li>Retire quando a massa estiver dourada e o queijo derretido e borbulhante</li>
+                <li>Tempere o frango com sal e pimenta</li>
+                <li>Em uma panela, refogue a cebola e o alho no óleo até ficarem dourados</li>
+                <li>Adicione o frango e cozinhe até que fique bem selado</li>
+                <li>Acrescente os champignons e refogue por 3 minutos</li>
+                <li>Adicione o molho de tomate, a mostarda e o ketchup, misture bem</li>
+                <li>Deixe cozinhar em fogo baixo por 10 minutos</li>
+                <li>Por último, adicione o creme de leite e mexa até ficar cremoso</li>
+                <li>Sirva quente com arroz branco e finalize com batata palha por cima</li>
             </ol>
         </div>
     </main>
